--- a/Prueba.html
+++ b/Prueba.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-  </head>
-  <body>
+</head>
+<body>
 
-  </body>
+ <h2>Esta es una prueba en la prueba</h2>
+<h3>Hay alguna manera de que se actualice mi código automáticamente....?</h3>
+</body>
 </html>
